fix(css): block quote contrast

--- a/static/style.css
+++ b/static/style.css
@@ -32,3 +32,7 @@ ul.tags {
 	list-style-type: none;
 	display: inline;
 }
+
+blockquote {
+	background-color: #1d7484;
+}
